# pitas-site

./: .gitignore  LICENSE  Makefile  README.md
core/: .gitignore  Cargo.toml  package.json  tsconfig.json
core/migrations/: 000_base_tables.sql  000_test.sql
core/prisma/: schema.prisma
core/prisma/migrations/20211227033301_initial/: migration.sql
core/prisma/migrations/20211227231240_videos/: migration.sql
core/prisma/migrations/20211227231314_/: migration.sql
core/prisma/migrations/20211227235121_remove_mime/: migration.sql
core/prisma/migrations/20211227235218_remove_videos/: migration.sql
core/src/: PitasError.ts  backend.rs  common.rs  config.rs  database.rs  handler.ts  images-manager.ts  index.ts  main.rs  videos-manager.ts
core/src/bot/: commands.rs  handler.ts  index.ts  mod.rs
core/src/bot/commands/: addimage.ts  addshort.ts  addvideo.ts  listimage.ts  listshort.ts  listvideos.ts  pitasgay.ts  removeimage.ts  removeshort.ts  removevideo.ts
core/src/database/: links.rs  mod.rs  models.rs
core/src/routes/: images.ts  index.ts  s.ts  videos.ts
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.module.css  App.tsx  Index.css  hooks.ts
frontend/src/components/: TerminalInput.module.css  TerminalInput.tsx  Window.module.css  Window.tsx  XServer.tsx
frontend/src/system/: shell.ts
frontend/src/system/root/: ayura.moe.tsx  clear.ts  echo.ts  eval.tsx  exit.ts  h.ts  help.ts  video.tsx  waifu.tsx  xecho.ts
