[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sqlx = { version = "0.5.9", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
] }

tokio = { version = "1.15.0" }
